# valkyrie.rs

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  README.md  Readme.md  package.json  rustfmt.toml
projects/nyar-ast/: Cargo.toml
projects/nyar-ast/src/: ast.rs  lib.rs  utils.rs
projects/nyar-ast/src/utils/: build_ast.rs  build_number.rs
projects/nyar-error/: Cargo.toml
projects/nyar-error/src/: lib.rs
projects/nyar-error/src/errors/: error_kinds.rs  mod.rs  native_wrap.rs  numeric_errors.rs
projects/nyar-error/src/span/: mod.rs
projects/nyar-hir/: Cargo.toml  Readme.md
projects/nyar-hir/src/: ast.rs  lib.rs
projects/nyar-hir/src/ast/: display.rs  mod.rs  utils.rs
projects/nyar-hir/src/cps/: cps_for_iter.vk  cps_if.vk  cps_loop.vk  cps_while.vk  cps_yield.vk  cps_yield_if.vk  eff_coro.vk  eff_gene.vk  eff_loop.vk  effects.rs  mod.rs
projects/nyar-hir/src/de_sugar/: mod.rs
projects/nyar-hir/src/errors/: error_kinds.rs  mod.rs  native_wrap.rs  numeric_errors.rs
projects/nyar-hir/src/utils/: build_ast.rs  build_number.rs  build_string.rs  mod.rs
projects/nyar-hir/tests/: main.rs
projects/nyar-interpreter/: Cargo.toml
projects/nyar-interpreter/doc/: bitflag.md  collections.md
projects/nyar-interpreter/src/: kont.rs  lib.rs
projects/nyar-interpreter/src/cell/: mod.rs
projects/nyar-interpreter/src/class/: prototype.rs
projects/nyar-interpreter/src/engine/: mod.rs
projects/nyar-interpreter/src/error/: log_level.rs  mod.rs
projects/nyar-interpreter/src/function/: attributes.rs  mod.rs  prototype.rs
projects/nyar-interpreter/src/module/: mod.rs
projects/nyar-interpreter/src/stateful/: mod.rs
projects/nyar-interpreter/src/typing/: display.rs  mod.rs
projects/nyar-interpreter/src/utils/: mod.rs
projects/nyar-interpreter/src/value/: format.rs  mod.rs
projects/nyar-interpreter/tests/: main.rs
projects/nyar-interpreter/tests/test_atoms/: debug_numbers.yaml  debug_specials.yaml  mod.rs
projects/nyar-interpreter/tests/test_exprs/: debug_lists.yaml  mod.rs  test_lists.rs
projects/nyar-interpreter/tests/test_let/: mod.rs
projects/nyar-js/: Cargo.toml
projects/nyar-js/src/: lib.rs
projects/nyar-js/src/compiler/: mod.rs  writer.rs
projects/nyar_valkyrie/: Cargo.toml
projects/nyar_valkyrie/src/: lib.rs  main.rs
projects/nyar_valkyrie/src/variant/: mod.rs
projects/sijuiacion-codegen/: Cargo.toml
projects/sijuiacion-codegen/src/: codegen.rs
projects/valkyrie-antlr/: Cargo.toml  Readme.md  ValkyrieAntlr.g4  ValkyrieAntlrLexer.g4  ValkyrieBasic.g4
projects/valkyrie-antlr/src/: lib.rs
projects/valkyrie-antlr/src/antlr/: ValkyrieAntlr.interp  ValkyrieAntlr.tokens  ValkyrieAntlrLexer.interp  ValkyrieAntlrLexer.tokens  mod.rs  valkyrieantlrlexer.rs  valkyrieantlrlistener.rs  valkyrieantlrparser.rs  valkyrieantlrvisitor.rs
projects/valkyrie-antlr/src/ast/: mod.rs  visitor.rs
projects/valkyrie-antlr/src/extractors/: mod.rs
projects/valkyrie-antlr/tests/: common.vk  main.rs  yield.vk
projects/valkyrie-antlr/tests/declaration/: bitset.vk  class.vk  class_debug.rkt  extension.vk  flags.vk  function.vk  let.vk  literal.vk  macro.vk  mod.rs  module.vk  namespaces.vk  tagged.vk  trait.vk  trait_debug.rkt  type.vk  union_debug.rkt  unions.vk
projects/valkyrie-antlr/tests/expression/: apply.vk  apply_debug.rkt  brackets.vk  dot_call.vk  generic.vk  generic_debug.rkt  infix.vk  infix_debug.rkt  literal.vk  mod.rs  new.vk  repl.vk  slice.vk  table.vk  test_apply.rs  unary.vk  unary_debug.rkt
projects/valkyrie-antlr/tests/literal/: collection.vk  collection_debug.rkt  escape_debug.rkt  mod.rs  multiline.vk  multiline_debug.rkt  number.vk  number_debug.rkt  string.vk  string_debug.rkt  symbol.vk  symbol_debug.rkt  table.vk  tuple.vk
projects/valkyrie-antlr/tests/other/: Iterator.vk  basic.vk  colorDemo.vk  import_statements.vk  logging.vk  yield.vk
projects/valkyrie-antlr/tests/statement/: catch.vk  control.vk  control_debug.rkt  define.vk  define_class_debug.rkt  define_flags.vk  export_import.vk  for.vk  for_loop.vk  for_loop_debug.rkt  if_else.vk  if_else_debug.rkt  if_let.vk  jmp_if.vk  (+14 more)
projects/valkyrie-ast/: Cargo.toml  readme.md
projects/valkyrie-ast/src/: display.rs  lib.rs  readme.md
projects/valkyrie-ast/tests/: main.rs  number.rs  operators.rs  readme.md
projects/valkyrie-errors/: Cargo.toml
projects/valkyrie-errors/src/: lib.rs
projects/valkyrie-ffi/: Cargo.toml  package.json
projects/valkyrie-ffi/src/: lib.rs
projects/valkyrie-ffi/tests/: main.rs
projects/valkyrie-interpreter/: Cargo.toml  Untitled.ipynb  package.json
projects/valkyrie-interpreter/src/: lib.rs  main.rs
projects/valkyrie-interpreter/tests/: integration_tests.rs  legion.toml
projects/valkyrie-language-server/: Cargo.toml
projects/valkyrie-language-server/src/: lib.rs  main.rs
projects/valkyrie-macro/: Cargo.toml
projects/valkyrie-parser/: Cargo.toml  Readme.md  build.rs  rustfmt.toml  valkyrie.peg  valkyrie.pest
projects/valkyrie-parser/grammars/: ValkyrieAntlr.g4  ValkyrieAntlrLexer.g4  formatter.ygg  readme.md  template.ygg  valkyrie.ygg
projects/valkyrie-parser/src/: grammar.rs  lib.rs  pest_parser.rs  string_fix.rs  traits.rs  utils.rs
projects/valkyrie-parser/tests/: main.rs  test.rs  test_assign.rs  test_expr.rs  test_if.rs  test_import.rs  test_index.rs  test_number.rs  yield.vk
projects/valkyrie-pest/: Cargo.toml  Readme.md  valkyrie.pest
projects/valkyrie-pest/src/: Readme.md  lib.rs  valkyrie.rs
projects/valkyrie-pest/tests/: main.rs  test_assign.rs  test_if.rs  test_index.rs  test_number.rs
projects/valkyrie-std/: Cargo.toml  Readme.md
projects/valkyrie-std-io/: Cargo.toml
projects/valkyrie-std-io/src/: lib.rs
projects/valkyrie-std-io/tests/: main.rs
projects/valkyrie-std/rust/: lib.rs
projects/valkyrie-types/: Cargo.toml  Readme.md  cv8.md  inherit.md
projects/valkyrie-types/src/: lib.rs  testing.rs
projects/valkyrie-types/tests/:  main.vk  component.vk  component.wat  main.rs  main.vk  random.vk  readme.md  test.vk
projects/valkyrie-workspace/: Cargo.toml  Readme.md
(+902 files in other folders)
