[workspace]

members = ["projects/*"]
default-members = [
    "projects/nyar-error",
    "projects/nyar-interpreter",
    "projects/nyar-hir",
    "projects/nyar-mir",
    "projects/nyar-js",
    "projects/valkyrie-pest",
    "projects/valkyrie-parser",
]
exclude = [
    "projects/valkyrie-core",
#   "projects/valkyrie-std",
]

[profile.release]
lto = true
opt-level = "s"