[package]
name = "nyar_ast"
version = "0.0.5"
authors = ["192607617@qq.com"]
edition = "2018"
description = "..."
license = "MPL-2.0"

[dependencies]
serde = "^1.0.104"
serde_derive = "^1.0.104"
serde_json = "^1.0.45"

[dependencies.num]
version = "^0.2.0"
default-features = false
features =  ["serde", "std"]

[dev-dependencies]

[features]
