[package]
name = "nyar_ast"
version = "0.1.0"
authors = ["192607617@qq.com"]
edition = "2018"
description = "..."
repository = "https://github.com/nyar-lang/NyarNative"
license = "MPL-2.0"

[dependencies]
# serde = "^1.0.104"
# serde_derive = "^1.0.104"
# serde_json = "^1.0.45"
arc_number = "0.1.1"

[dev-dependencies]

[features]
