[package]
name = "nyar-error"
version = "0.1.0"
authors = ["192607617@qq.com"]
edition = "2021"
description = "..."
repository = "https://github.com/nyar-lang/NyarNative"
license = "MPL-2.0"

[dependencies]
# serde_json = "^1.0.45"

[dependencies.serde]
version = "1.0.143"
features = ["derive"]



[dev-dependencies]

[features]
default = []
