[package]
name = "nyar-hir"
version = "0.2.0"
authors = ["192607617@qq.com"]
edition = "2018"
description = "..."
repository = "https://github.com/nyar-lang/NyarNative"
license = "MPL-2.0"

[dependencies]
num = { version = "0.4.0", features = ["serde"] }
serde = { version = "1.0.143", features = ["derive"] }





[dev-dependencies]

[features]
default = []
