[package]
name = "nyar-hir"
version = "0.2.0"
authors = ["192607617@qq.com"]
edition = "2018"
description = "..."
repository = "https://github.com/nyar-lang/NyarNative"
license = "MPL-2.0"

[dependencies]
serde = { version = "1.0.143", features = ["derive"] }
genawaiter = "0.99.1"

[dependencies.nyar-error]
version = "0.1.0"
path = "../nyar-error"




[dev-dependencies]

[features]
default = []
