[package]
name = "nyar-interpreter"
version = "0.1.0"
authors = ["192608617@qq.com"]
edition = "2018"
description = "..."
repository = "https://github.com/nyar-lang/NyarNative"
license = "MPL-2.0"


[dependencies]
# indexmap = "1.6"
# zerogc = "0.2.0-alpha.1"
# zerogc-derive = "0.2.0-alpha.1"
num = "0.3"
bigdecimal = "0.2"
bitflags = "1.3"

[dependencies.indexmap]
version = "1.6"
features = ["std", "serde", "rayon"]

[dependencies.nyar-hir]
version = "0.1"
path = "../nyar-hir"

#[dependencies.nyar-mir]
#version = "0.1"
#path = "../nyar-mir"

[dev-dependencies]


[build-dependencies]
