[package]
name = "nyar-interpreter"
version = "0.2.0"
authors = ["192608617@qq.com"]
edition = "2018"
description = "..."
repository = "https://github.com/nyar-lang/NyarNative"
license = "MPL-2.0"


[dependencies]
# Manage GC
# zerogc = "0.2.0-alpha.1"
# zerogc-derive = "0.2.0-alpha.1"
shredder = "0.2"

# TODO: Manage Type FFI
type-uuid = "0.1"

bitflags = "1.3"
# TODO: intern + inline str
# TODO: intern + inline int
num = "0.3"
bigdecimal = "0.2"

# Manage pretty print
pretty = "0.10"
# Manage mudule resolve
indextree = "4.3"
patricia_tree = "0.3"



nyar-hir = {version = "0.2", path = "../nyar-hir"}
# nyar-mir = {version = "0.2", path = "../nyar-mir"}

[dependencies.indexmap]
version = "1.6"
features = ["std", "serde", "rayon"]


[dev-dependencies]
valkyrie-parser = {version = "0.2", path = "../valkyrie-parser"}

[build-dependencies]
