[package]
name = "nyar-js"
version = "0.1.0"
authors = ["192607617@qq.com"]
edition = "2018"
description = "..."
repository = "https://github.com/nyar-lang/NyarNative"
license = "MPL-2.0"

[dependencies]
# serde_json = "^1.0.45"
# lsp-types = "0.89"

[dependencies.nyar-hir]
version = "0.2.0"
path = "../nyar-hir"



[dev-dependencies]

[features]
default = []