[package]
name = "nyar_sijuiacion"
version = "0.0.1"
authors = ["192608617@qq.com"]
edition = "2018"
description = "..."
repository = "https://github.com/nyar-lang/NyarNative"
license = "MPL-2.0"


[dependencies]
nyar_ast = {path = "../nyar-ast", version = "0.0.8"}

[dev-dependencies]


[build-dependencies]
