[package]
name = "valkyrie-antlr"
version = "0.0.1"
authors = ["192608617@qq.com"]
edition = "2018"
description = "The hand write parser of valkyrie language"
repository = "https://github.com/nyar-lang/NyarNative"
documentation = "https://docs.rs/valkyrie-parser"
license = "MPL-2.0"

[dependencies]
tracing = "0.1.37"

[dependencies.antlr-rust]
version = "0.3.0-beta"

[dependencies.valkyrie-ast]
version = "0.1.*"
features = ["pretty-print", "std", "lispify"]
path = "../valkyrie-ast"

[dependencies.nyar-error]
features = []
version = "0.1.4"
path = 'C:\Users\Dell\CLionProjects\nyar-vm\projects\nyar-error'

[dev-dependencies]


[build-dependencies]
