[package]
name = "valkyrie-ast"
version = "0.1.3"
authors = ["Aster <192607617@qq.com>"]
description = "Strong typed abstract syntax tree of valkyrie language"
repository = "https://github.com/nyar-vm/valkyrie.rs"
documentation = "https://docs.rs/valkyrie-ast"
keywords = ["valkyrie", "ast", "parser", "language"]
categories = ["data-structures"]
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
deriver = "0.0.0"
serde = { version = "1.0.163", default-features = false, optional = true }

[dependencies.pretty-print]
version = "0.1.2"
optional = true

[features]
default = ["pretty-print"]
std = ["pretty-print?/std", "serde?/std"]
serde = ["dep:serde", "serde/derive"]

[package.metadata.docs.rs]
all-features = true
