[package]
name = "valkyrie-ast"
version = "0.1.9"
authors = ["Aster <192607617@qq.com>"]
description = "Strong typed abstract syntax tree of valkyrie language"
repository = "https://github.com/nyar-vm/valkyrie.rs"
documentation = "https://docs.rs/valkyrie-ast"
keywords = ["valkyrie", "ast", "parser", "language"]
categories = ["data-structures"]
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
deriver = "0.0.0"
serde = { version = "1.0.188", default-features = false, optional = true }



[dependencies.pretty-print]
version = "0.1.9"
optional = true
#path = 'C:\Users\Dell\CLionProjects\pretty-print\projects\pretty-print'

[dependencies.lispify]
version = "0.1.0"
optional = true

[features]
default = ["pretty-print"]
std = ["pretty-print?/std", "serde?/std"]
serde = ["dep:serde", "serde/derive"]

[package.metadata.docs.rs]
all-features = true
