[package]
name = "valkyrie-error"
version = "0.1.1"
authors = ["Aster <192607617@qq.com>"]
description = "Error types for valkyrie language"
repository = "https://github.com/nyar-vm/valkyrie.rs"
documentation = "https://docs.rs/valkyrie-error"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
diagnostic = "0.5.1"
# Parsing
pex = { version = "0.1.6", optional = true }
pratt = { version = "0.4.0", optional = true }
dashu = { version = "0.3.1", optional = true, features = ["serde"] }
toml = { version = "0.7.2", optional = true }
json5 = { version = "0.4.1", optional = true }
serde = { version = "1.0.163", optional = true }
#indexmap = "1.9.2"
#convert_case = "0.6.0"
#itertools = "0.10.5"
#url = "2.2.2"
## parser
#peginator = { version = "0.6.0", optional = true }
#pratt = { version = "0.4.0", optional = true }


[dev-dependencies]

[features]
#default = []
#pex = ["dep:pex", "pex/regex", "regex"]
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true