[package]
name = "valkyrie-error"
version = "0.1.5"
authors = ["Aster <192607617@qq.com>"]
description = "Error types for valkyrie language"
repository = "https://github.com/nyar-vm/valkyrie.rs"
documentation = "https://docs.rs/valkyrie-error"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
diagnostic = "0.5.1"
serde = { version = "1.0.188", optional = true }
# Parsing
num-traits = "0.2.16"
dashu = { version = "0.4.0", optional = true, features = ["serde"] }
toml = { version = "0.8.0", optional = true }
json5 = { version = "0.4.1", optional = true, features = [] }
serde_json = { version = "1.0.105", optional = true }
#indexmap = "1.9.2"
#patricia_tree = "0.5.7"
#convert_case = "0.6.0"
#itertools = "0.10.5"
#url = "2.2.2"
## parser
#peginator = { version = "0.6.0", optional = true }
#pratt = { version = "0.4.0", optional = true }

[dependencies.nyar-number]
version = "0.3.3"
optional = true
features = ["serde"]

[dependencies.nyar-collection]
version = "0.0.0"
optional = true
path = 'C:\Users\Dell\CLionProjects\disk-map\projects\nyar-collection'

[dev-dependencies]

[features]
#default = []
#pex = ["dep:pex", "pex/regex", "regex"]
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true
