[package]
name = "valkyrie-ffi"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/nyar-vm/valkyrie.rs"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
inwelling = "0.3.0"


[dev-dependencies]

[features]
default = []
