[package]
name = "valkyrie-wit"
version = "0.1.0"
authors = ["192608617@qq.com"]
edition = "2018"
description = "Valkyrie Language Server"
repository = "https://github.com/nyar-vm/valkyrie.rs"
license = "MPL-2.0"



[dependencies]
anyhow = "1.0.80"
wit-parser = "0.201.0"
tracing = "0.1.40"
convert_case = "0.6.0"

[dev-dependencies]

[build-dependencies]
