[package]
name = "valkyrie-interpreter"
version = "0.2.2"
authors = ["192607617@qq.com"]
description = "High level intermediate representation for Nyar"
repository = "https://github.com/nyar-vm/valkyrie.rs"
license = "MPL-2.0"
edition = "2021"

[[bin]]
name = "jupyter-valkyrie"
path = "src/main.rs"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde-types = "0.1.1"
toml = "0.7.0"
json5 = "0.4.1"
syntax-error = "0.0.2"

[dependencies.diagnostic-quick]
version = "0.4.0"
features = []

[dependencies.valkyrie-types]
version = "0.0.1"
features = ["pex", "serde_json"]
path = "../valkyrie-types"


[dependencies.valkyrie-parser]
version = "0.2.1"
features = []
path = "../valkyrie-parser"

[dependencies.valkyrie-ast]
version = "0.0.*"
features = []
path = "../valkyrie-ast"

[dependencies.jupyter]
version = "0.1.5"
#path = "D:\\Java\\jupyter-protocol\\projects\\jupyter"

[dependencies.jupyter-derive]
version = "0.0.1"
#path = "C:\\Users\\Dell\\CLionProjects\\jupyter-protocol\\projects\\jupyter-derive"