[package]
name = "valkyrie-language-server"
version = "0.1.0"
authors = ["192608617@qq.com"]
edition = "2018"
description = "Valkyrie Language Server"
repository = "https://github.com/nyar-vm/valkyrie.rs"
license = "MPL-2.0"

[[bin]]
name = "vls"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
async-tungstenite = { version = "0.23.0", features = ["tokio-rustls-native-certs"] }
#tokio = { version = "1.25.0", features = ["full"] }
#axum = { version = "0.6.4", features = [] }
#axum-macros = "0.3.2"
#tower = "0.4.13"

#reqwest = { version = "0.11", features = ["json"] }

#[dependencies.nyar-error]
#version = "0.1.4"
#path = "../nyar-error"
#
#
#[dependencies.valkyrie-parser]
#version = "0.2.0"
#path = "../valkyrie-parser"


[dev-dependencies]

[build-dependencies]
