[package]
name = "valkyrie-macro"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/nyar-vm/valkyrie.rs"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]

[dev-dependencies]

[features]
default = []
