[package]
name = "valkyrie-parser"
version = "0.2.4"
authors = ["192608617@qq.com"]
description = "The hand write parser of valkyrie language"
repository = "https://github.com/nyar-lang/NyarNative"
documentation = "https://docs.rs/valkyrie-parser"
license = "MPL-2.0"
edition = "2021"

[dependencies]
pratt = "0.4.0"

[dependencies.yggdrasil-rt]
version = "0.0.13"

[dependencies.nyar-error]
features = []
version = "0.1.4"

[dev-dependencies]
anyhow = "1.0.75"


[build-dependencies]
