[package]
name = "valkyrie-parser"
version = "0.2.4"
authors = ["192608617@qq.com"]
description = "The hand write parser of valkyrie language"
repository = "https://github.com/nyar-lang/NyarNative"
documentation = "https://docs.rs/valkyrie-parser"
license = "MPL-2.0"
edition = "2021"

[dependencies]
pratt = "0.4.0"
num-bigint = "0.4.4"


[dependencies.valkyrie-ast]
version = "0.1.*"
path = "../valkyrie-ast"

[dependencies.yggdrasil-rt]
version = "0.0.16"
#path = 'C:\Users\Dell\CLionProjects\yggdrasil.rs\projects\ygg-rt'

[dependencies.nyar-error]
version = "0.1.10"
path = 'C:\Users\Dell\CLionProjects\nyar-vm\projects\nyar-error'
features = ["pratt", "yggdrasil-rt"]

[dev-dependencies]
anyhow = "1.0.75"


[build-dependencies]
