[package]
name = "valkyrie-pest"
version = "0.1.1"
authors = ["192608617@qq.com"]
edition = "2018"
description = "Valkyrie Language pest lexer"
repository = "https://github.com/nyar-lang/NyarNative"
license = "MPL-2.0"

[dependencies]
pest = "2.1"

[dev-dependencies]
quote = "1.0"
pest_derive = "2.1"
pest_generator = "2.1"


[build-dependencies]
