[package]
name = "valkyrie-std"
publish = false
version = "0.2.0"
authors = ["192608617@qq.com"]
edition = "2018"
description = "Valkyrie Language pest lexer"
repository = "https://github.com/nyar-lang/NyarNative"
license = "MPL-2.0"

[lib]
name = "lib"
path = "rust/lib.rs"

[dependencies]
pest = "2.1"

[dev-dependencies]
quote = "1.0"
pest_derive = "2.1"
pest_generator = "2.1"


[build-dependencies]
