[package]
name = "valkyrie-types"
version = "0.0.7"
authors = ["Aster <192607617@qq.com>"]
description = "Shard types for valkyrie language"
repository = "https://github.com/nyar-vm/valkyrie.rs"
documentation = "https://docs.rs/valkyrie-types"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
pretty-print = "0.1.9"
ordered-float = "4.1.1"
heck = "0.4.1"
serde = "1.0.188"
shredder = "0.2.0"
indexmap = "2.0.0"
itertools = "0.11.0"
wasmtime = { version = "14.0.4", features = ["component-model"] }
wit-bindgen-core = "0.13.1"

[dependencies.nyar-error]
version = "0.1.*"
features = ["json5"]
#path = 'C:\Users\Dell\CLionProjects\nyar-vm\projects\nyar-error'

[dependencies.valkyrie-ast]
version = "0.1.*"
path = "../valkyrie-ast"

[dev-dependencies]

[features]
default = []
