[package]
name = "valkyrie-types"
version = "0.0.7"
authors = ["Aster <192607617@qq.com>"]
description = "Shard types for valkyrie language"
repository = "https://github.com/nyar-vm/valkyrie.rs"
documentation = "https://docs.rs/valkyrie-types"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
salsa = "0.17.0-pre.2"
serde = "1.0.188"
im = "15.1.0"
xxhash-rust = { version = "0.8.7", features = ["xxh3", "const_xxh3"] }
shredder = "0.2.0"
smallvec = "2.0.0-alpha.1"
id-arena = { version = "2", features = ["rayon"] }
dashmap = "5.5.3"
indexmap = "2.1.0"
itertools = "0.12.0"
image = { version = "0.24.7", features = [] }
ndarray = { version = "0.15.6", features = [] }
polars = { version = "0.35.4", features = ["lazy"], optional = true }
jupyter-types = "0.0.*"

[dependencies.nyar-wasm]
version = "0.0.*"
path = 'C:\Users\Dell\CLionProjects\nyar-vm\projects\nyar-wasm'

[dependencies.nyar-collection]
version = "0.0.1"
features = ["serde"]
#path = 'C:\Users\Dell\CLionProjects\disk-map\projects\nyar-collection'

[dependencies.nyar-number]
version = "0.3.5"
features = ["serde"]
#path = 'C:\Users\Dell\CLionProjects\nyar-prime\projects\nyar-number'

[dependencies.nyar-error]
version = "0.1.*"
features = ["json5", "num", "dashu"]
path = 'C:\Users\Dell\CLionProjects\nyar-vm\projects\nyar-error'

[dependencies.valkyrie-ast]
version = "0.1.*"
path = "../valkyrie-ast"

[dependencies.valkyrie-parser]
version = "0.2.*"
path = "../valkyrie-parser"



[features]
default = []
